--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,6 +9,8 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 
+submodules:
+  include: all
 # Build documentation with MkDocs
 #mkdocs:
 #  configuration: mkdocs.yml
